--- a/projects/ngsuite/src/lib/core/components/loading/root/root.component.html
+++ b/projects/ngsuite/src/lib/core/components/loading/root/root.component.html
@@ -1,1 +1,1 @@
-<ngs-loading-page [ngClass]="{'visible': visible}"></ngs-loading-page>
+<ngs-loading-page [attr.visible]="visible"></ngs-loading-page>
