--- a/projects/ngsuite/src/lib/core/components/loading/root/root.component.scss
+++ b/projects/ngsuite/src/lib/core/components/loading/root/root.component.scss
@@ -1,11 +1,8 @@
 :host {
   display: block;
-
-  ngs-loading-page {
-    display: none;
-
-    &.visible {
-      display: block;
-    }
-  }
+  position: fixed;
+  left: 0px; right: 0px;
+  top: 0px; bottom: 0px;
+  visibility: hidden;
+  z-index: 1000;
 }
