--- a/projects/ngsuite/src/lib/core/components/loading/root/root.component.html
+++ b/projects/ngsuite/src/lib/core/components/loading/root/root.component.html
@@ -1,1 +1,5 @@
-<ngs-loading-page [attr.data-visible]="visible"></ngs-loading-page>
+<ngs-loading-page
+  [text]="text"
+  [counter]="instances"
+  [attr.data-visible]="visible"
+></ngs-loading-page>
