--- a/projects/ngsuite/src/lib/core/components/loading/section/section.component.html
+++ b/projects/ngsuite/src/lib/core/components/loading/section/section.component.html
@@ -1,10 +1,11 @@
-<div class="content">
-  <ng-content></ng-content>
-</div>
+<div class="wrapper">
+  <div class="content">
+    <ng-content></ng-content>
+  </div>
 
-<div class="overlay" [ngClass]="{'visible': loading}">
-  <div class="animation">
-    <ng-template #container></ng-template>
+  <div class="overlay" [ngClass]="{'visible': loading}">
+    <div class="animation">
+      <ng-template #container></ng-template>
+    </div>
   </div>
 </div>
-
