--- a/projects/ngsuite/src/lib/core/components/loading/section/section.component.scss
+++ b/projects/ngsuite/src/lib/core/components/loading/section/section.component.scss
@@ -2,30 +2,43 @@
   display: block;
   position: relative;
 
-  > .content {
+  > .wrapper {
     display: block;
-  }
+    position: relative;
+    width: 100% !important;
+    height: 100% !important;
+    overflow: hidden;
 
-  > .overlay {
-    display: none;
-    position: absolute;
-    top: 0px;
-    bottom: 0px;
-    left: 0px;
-    right: 0px;
-    z-index: 50;
-
-    &.visible {
+    > .content {
       display: block;
+      width: 100% !important;
+      height: 100% !important;
+      overflow: hidden auto;
     }
 
-    > .animation {
+    > .overlay {
       display: none;
       position: absolute;
-      top: 50%;
-      left: 50%;
-      transform: translate(-50%, -50%);
-      z-index: 100;
+      top: 0px; bottom: 0px;
+      left: 0px; right: 0px;
+      background-color: var(--ngs-loading-background) !important;
+      z-index: 50;
+
+      &.visible {
+        display: block;
+      }
+
+      > .animation {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        position: absolute;
+        width: 100% !important;
+        height: 100% !important;
+        z-index: 50;
+      }
     }
   }
+
 }
