Fix dialog stylings

--- a/projects/ngsuite/src/lib/dialog/components/body/body.component.scss
+++ b/projects/ngsuite/src/lib/dialog/components/body/body.component.scss
@@ -1,5 +1,7 @@
 :host {
   display: block;
   bottom: 0px;
-  padding: 20px;
+  padding: var(--ngs-dialog-padding) !important;
+  color: var(--ngs-dialog-text-color) !important;
+  background-color: var(--ngs-dialog-background-color) !important;
 }
