--- a/projects/ngsuite/src/lib/dialog/components/footer/footer.component.scss
+++ b/projects/ngsuite/src/lib/dialog/components/footer/footer.component.scss
@@ -2,9 +2,10 @@
   display: block;
   position: sticky;
   bottom: 0px;
-  background-color: #FFF !important;
-  border-top: 1px solid var(--mbi-light) !important;
-  padding: 10px 20px;
+  color: var(--ngs-dialog-footer-text-color) !important;
+  background-color: var(--ngs-dialog-background-color) !important;
+  border-top: var(--ngs-dialog-border) !important;
+  padding: calc(var(--ngs-dialog-padding) * .5) var(--ngs-dialog-padding) !important;
 
   > .wrapper {
     display: flex;
