--- a/projects/ngsuite/src/lib/dialog/components/header/header.component.scss
+++ b/projects/ngsuite/src/lib/dialog/components/header/header.component.scss
@@ -4,9 +4,10 @@
   align-items: center;
   position: sticky;
   top: 0px;
-  background-color: #FFF !important;
-  border-bottom: 1px solid var(--mbi-light) !important;
-  padding: 20px;
+  color: var(--ngs-dialog-header-text-color) !important;
+  background-color: var(--ngs-dialog-background-color) !important;
+  border-bottom: var(--ngs-dialog-border) !important;
+  padding: var(--ngs-dialog-padding) !important;
   z-index: 20;
 
   > .left {
