Fix Google material icons import

--- a/projects/ngsuite/src/styles/features/icons.scss
+++ b/projects/ngsuite/src/styles/features/icons.scss
@@ -1,4 +1,4 @@
-@use 'https://fonts.googleapis.com/css2?family=Material+Symbols+Sharp:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200';
+@import url('https://fonts.googleapis.com/css2?family=Material+Symbols+Sharp:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200');
 
 .ngs-icon {
   font-family: 'Material Symbols Sharp';
