--- a/projects/ngsuite/src/lib/core/components/loading/root/root.component.scss
+++ b/projects/ngsuite/src/lib/core/components/loading/root/root.component.scss
@@ -4,5 +4,5 @@
   left: 0px; right: 0px;
   top: 0px; bottom: 0px;
   visibility: hidden;
-  z-index: 1000;
+  z-index: var(--ngs-loading-z-index) !important;
 }
