--- a/projects/ngsuite/src/lib/dialog/components/dialog/dialog.component.scss
+++ b/projects/ngsuite/src/lib/dialog/components/dialog/dialog.component.scss
@@ -1,8 +1,7 @@
 :host {
   display: block;
   position: fixed;
-  top: 0px; bottom: 0px;
-  left: 0px; right: 0px;
+  inset: 0px;
   background-color: var(--ngs-dialog-backdrop-color) !important;
   visibility: visible !important;
   z-index: var(--ngs-dialog-z-index) !important;
@@ -10,8 +9,8 @@
   .ngs-dialog {
     &-wrapper {
       display: block;
-      width: 100vw !important;
-      height: 100vh !important;
+      width: 100% !important;
+      height: 100% !important;
       overflow: hidden auto;
     }
 
@@ -20,9 +19,8 @@
       flex-direction: column;
       justify-content: center;
       align-items: center;
-      width: 100% !important;
-      height: 100% !important;
-      padding: 30px 0px;
+      min-width: 100%;
+      min-height: 100%;
     }
   }
 }
