--- a/projects/ngsuite/src/styles/_functions.scss
+++ b/projects/ngsuite/src/styles/_functions.scss
@@ -1,14 +1,14 @@
-@import './variables';
+@use './variables' as vars;
 
 @function ngs-color($key: default, $darken: 0) {
-  $value: map-get($color, $key);
+  $value: map-get(vars.$color, $key);
   @return darken($value, $darken);
 }
 
 @function ngs-device($key: md) {
-  @if map-has-key($device, $key) {
-    @return map-get($device, $key);
+  @if map-has-key(vars.$device, $key) {
+    @return map-get(vars.$device, $key);
   }
 
-  @return map-get($device, md);
+  @return map-get(vars.$device, md);
 }
