--- a/projects/ngsuite/src/styles/_index.scss
+++ b/projects/ngsuite/src/styles/_index.scss
@@ -1,6 +1,6 @@
-@use './variables';
-@use './functions';
-@use './mixins';
-@use './root';
+@use './variables' as *;
+@use './functions' as *;
+@use './mixins' as *;
+@use './root' as *;
 
-@use './features';
+@use './features' as *;
