Update stylings to use `@use` instead of `@import`

--- a/projects/ngsuite/src/styles/_index.scss
+++ b/projects/ngsuite/src/styles/_index.scss
@@ -1,6 +1,6 @@
-@use './variables';
-@use './functions';
-@use './mixins';
-@use './root';
+@forward './variables';
+@forward './functions';
+@forward './mixins';
 
+@use './root';
 @use './features';
