--- a/projects/ngsuite/src/styles/features/icons.scss
+++ b/projects/ngsuite/src/styles/features/icons.scss
@@ -16,6 +16,7 @@
   -webkit-font-feature-settings: 'liga';
   -webkit-font-smoothing: antialiased;
   font-variation-settings: 'FILL' 0, 'wght' 400, 'GRAD' 0, 'opsz' 24;
+  vertical-align: middle;
 
   &.menu::before { content: "\e5d2"; }
   &.search::before { content: "\e8b6"; }
