Change data-visible attr to visible class

--- a/projects/ngsuite/src/lib/core/components/loading/page/page.component.scss
+++ b/projects/ngsuite/src/lib/core/components/loading/page/page.component.scss
@@ -11,7 +11,7 @@
   width: 100% !important;
   height: 100% !important;
 
-  &[data-visible="true"] {
+  &.visible {
     visibility: visible !important;
   }
 }
