--- a/projects/ngsuite/src/lib/core/components/loading/root/root.component.html
+++ b/projects/ngsuite/src/lib/core/components/loading/root/root.component.html
@@ -1,1 +1,1 @@
-<ngs-loading-page [attr.data-visible]="showing"></ngs-loading-page>
+<ngs-loading-page [class.visible]="showing"></ngs-loading-page>
