--- a/projects/ngsuite/src/lib/form/components/form/form.component.html
+++ b/projects/ngsuite/src/lib/form/components/form/form.component.html
@@ -1,3 +1,3 @@
-<form #form [formGroup]="formGroup" [autocomplete]="autocomplete" (submit)="onFormSubmit($event)">
+<form #form [formGroup]="directive.form" [autocomplete]="autocomplete" (submit)="onFormSubmit($event)">
   <ng-content></ng-content>
 </form>
