--- a/projects/ngsuite/src/lib/form/components/form/message/message.component.html
+++ b/projects/ngsuite/src/lib/form/components/form/message/message.component.html
@@ -1,4 +1,4 @@
-<ng-container [ngTemplateOutlet]="info?.template || null"></ng-container>
+<ng-container [ngTemplateOutlet]="info?.template || null" *ngIf="submitted"></ng-container>
 
 <ng-template>
   <ng-content></ng-content>
