Refactor to use standalone components

--- a/projects/ngsuite/src/lib/core/components/panel/header/header.component.html
+++ b/projects/ngsuite/src/lib/core/components/panel/header/header.component.html
@@ -5,10 +5,7 @@
     <ng-content></ng-content>
   </div>
 
-  <ngs-icon
-    class="refresh"
-    [name]="{ type: 'sharp', name: 'refresh' }"
-    (click)="onRefresh()"
-    *ngIf="refresh.observers.length"
-  ></ngs-icon>
+  @if (refresh.observers.length) {
+    <ngs-icon class="refresh" [name]="{ type: 'sharp', name: 'refresh' }" (click)="onRefresh()"></ngs-icon>
+  }
 </div>
