--- a/projects/ngsuite/src/lib/core/components/pagination/info/info.component.html
+++ b/projects/ngsuite/src/lib/core/components/pagination/info/info.component.html
@@ -1,27 +1,31 @@
-<div class="left" *ngIf="data?.total">
-  <span>{{ pageInfo }}</span>
-  <span>&nbsp; &raquo; &nbsp;</span>
-  <span>{{ records }}</span>
-</div>
+@if (data.total) {
+  <div class="left">
+    <span>{{ pageInfo }}</span>
+    <span>&nbsp; &raquo; &nbsp;</span>
+    <span>{{ records }}</span>
+  </div>
+}
 
 <div class="spacer"></div>
 
-<div class="right" *ngIf="data?.total">
-  <a href="" [ngClass]="{'disabled': isPrevDisabled}" (click)="prev($event)">&laquo; PREV</a>
+@if (data.total) {
+  <div class="right">
+    <a href="" [ngClass]="{'disabled': isPrevDisabled}" (click)="prev($event)">&laquo; PREV</a>
 
-  <span>&nbsp;</span>
+    <span>&nbsp;</span>
 
-  <a href="" [ngClass]="{'disabled': isDisabled(1)}" (click)="navigate(1, $event)">1</a>
+    <a href="" [ngClass]="{'disabled': isDisabled(1)}" (click)="navigate(1, $event)">1</a>
 
-  <span *ngIf="leftpad">...</span>
+    @if (leftpad) {<span>...</span>}
 
-  <a href="" [ngClass]="{'disabled': (data.current_page === page)}" (click)="navigate(page, $event)" *ngFor="let page of links">{{ page }}</a>
+    <a href="" [ngClass]="{'disabled': (data.current_page === page)}" (click)="navigate(page, $event)" *ngFor="let page of links">{{ page }}</a>
 
-  <span *ngIf="rightpad">...</span>
+    @if (rightpad) {<span>...</span>}
 
-  <a href="" *ngIf="showLastPage" [ngClass]="{'disabled': isDisabled(lastPage)}" (click)="navigate(lastPage, $event)">{{ lastPage }}</a>
+    <a href="" *ngIf="showLastPage" [ngClass]="{'disabled': isDisabled(lastPage)}" (click)="navigate(lastPage, $event)">{{ lastPage }}</a>
 
-  <span>&nbsp;</span>
+    <span>&nbsp;</span>
 
-  <a href="" [ngClass]="{'disabled': isNextDisabled}" (click)="next($event)">NEXT &raquo;</a>
-</div>
+    <a href="" [ngClass]="{'disabled': isNextDisabled}" (click)="next($event)">NEXT &raquo;</a>
+  </div>
+}
