--- a/projects/ngsuite/src/styles/features/dialog.scss
+++ b/projects/ngsuite/src/styles/features/dialog.scss
@@ -1,18 +1,20 @@
+@use '../variables' as v;
+
 :root {
-  --ngs-dialog-z-index: 1030;
-  --ngs-dialog-backdrop-color: rgba(0, 0, 0, .3);
+  --ngs-dialog-z-index: #{v.$dialog-z-index};
+  --ngs-dialog-backdrop-color: #{v.$dialog-backdrop-color};
 
-  --ngs-dialog-closebtn-color: rgba(0, 0, 0, .7);
-  --ngs-dialog-closebtn-opacity: .7;
+  --ngs-dialog-closebtn-color: #{v.$dialog-closebtn-color};
+  --ngs-dialog-closebtn-opacity: #{v.$dialog-closebtn-opacity};
 
-  --ngs-dialog-text-color: #333;
-  --ngs-dialog-header-text-color: #333;
-  --ngs-dialog-footer-text-color: #333;
+  --ngs-dialog-text-color: #{v.$dialog-text-color};
+  --ngs-dialog-header-text-color: #{v.$dialog-header-text-color};
+  --ngs-dialog-footer-text-color: #{v.$dialog-footer-text-color};
 
-  --ngs-dialog-padding: 20px;
-  --ngs-dialog-background-color: #FFF;
-  --ngs-dialog-box-shadow: 0px 0px 5px rgba(0, 0, 0, .4);
-  --ngs-dialog-border: 1px solid var(--mbi-light);
+  --ngs-dialog-padding: #{v.$dialog-padding};
+  --ngs-dialog-background-color: #{v.$dialog-background-color};
+  --ngs-dialog-box-shadow: #{v.$dialog-box-shadow};
+  --ngs-dialog-border: #{v.$dialog-border};
 }
 
 .ngs-dialog-box {
