Fix ngIf on dialog alert and confirm components

--- a/projects/ngsuite/src/lib/dialog/popup/alert/alert.component.html
+++ b/projects/ngsuite/src/lib/dialog/popup/alert/alert.component.html
@@ -1,6 +1,8 @@
-<ngs-dialog-header *ngIf="title">
-  <h1 ngs-dialog-title>{{ title }}</h1>
-</ngs-dialog-header>
+@if (title) {
+  <ngs-dialog-header>
+    <h1 ngs-dialog-title>{{ title }}</h1>
+  </ngs-dialog-header>
+}
 
 <ngs-dialog-body>
   <div [innerHTML]="message"></div>
