Change dialog confirm button type

--- a/projects/ngsuite/src/lib/dialog/popup/confirm/confirm.component.html
+++ b/projects/ngsuite/src/lib/dialog/popup/confirm/confirm.component.html
@@ -9,7 +9,7 @@
 </ngs-dialog-body>
 
 <ngs-dialog-footer>
-  <ngs-button danger (click)="reject()">
+  <ngs-button dark (click)="reject()">
     <span>Cancel</span>
   </ngs-button>
 
