Fix dialog focus error

--- a/projects/ngsuite/src/styles/features/dialog.scss
+++ b/projects/ngsuite/src/styles/features/dialog.scss
@@ -22,6 +22,10 @@
   background-color: var(--ngs-dialog-background-color) !important;
   box-shadow: var(--ngs-dialog-box-shadow) !important;
 
+  &:focus {
+    outline: none;
+  }
+
   [ngs-dialog-title] {
     margin: 0px;
     font-size: 1.1rem;
