--- a/projects/ngsuite/src/lib/form/components/form/message/message.component.html
+++ b/projects/ngsuite/src/lib/form/components/form/message/message.component.html
@@ -1,6 +1,4 @@
-@if (submitted) {
-  <ng-container [ngTemplateOutlet]="info?.template || null"></ng-container>
-}
+<ng-template #container></ng-template>
 
 <ng-template>
   <ng-content></ng-content>
