--- a/projects/ngsuite/src/lib/form/components/form/message/message.component.scss
+++ b/projects/ngsuite/src/lib/form/components/form/message/message.component.scss
@@ -1,3 +1,12 @@
 :host {
   display: block;
+  font-size: 12px;
+
+  > .error {
+    color: var(--ngs-error);
+  }
+
+  > .pending {
+    color: #333;
+  }
 }
