--- a/projects/ngsuite/src/lib/form/components/form/message/error/error.component.html
+++ b/projects/ngsuite/src/lib/form/components/form/message/error/error.component.html
@@ -1,5 +1,5 @@
 <ng-template #template>
-  <div class="error">
+  <div class="error" ngs-error>
     <ng-content></ng-content>
   </div>
 </ng-template>
