--- a/projects/ngsuite/src/styles/features/misc.scss
+++ b/projects/ngsuite/src/styles/features/misc.scss
@@ -5,3 +5,6 @@
 
 [ngs-flex-x] { width: 0px; }
 [ngs-flex-y] { height: 0px; }
+
+[ngs-error] { color: var(--ngs-error); }
+[ngs-pending] { color: #CCC; }
