--- a/projects/ngsuite/src/lib/form/components/form/message/pending/pending.component.html
+++ b/projects/ngsuite/src/lib/form/components/form/message/pending/pending.component.html
@@ -1,5 +1,5 @@
 <ng-template #template>
-  <div class="pending">
+  <div class="pending" ngs-pending>
     <ng-content></ng-content>
   </div>
 </ng-template>
