Fix dialog footer and buttons

--- a/projects/ngsuite/src/lib/dialog/popup/confirm/confirm.component.html
+++ b/projects/ngsuite/src/lib/dialog/popup/confirm/confirm.component.html
@@ -13,7 +13,7 @@
     <span>Cancel</span>
   </ngs-button>
 
-  <ngs-button primary (click)="accept()">
+  <ngs-button [theme]="defaultBtnTheme" (click)="accept()">
     <span>Okay</span>
   </ngs-button>
 </ngs-dialog-footer>
