--- a/projects/ngsuite/src/lib/dialog/popup/alert/alert.component.html
+++ b/projects/ngsuite/src/lib/dialog/popup/alert/alert.component.html
@@ -9,7 +9,7 @@
 </ngs-dialog-body>
 
 <ngs-dialog-footer>
-  <ngs-button primary (click)="accept()">
+  <ngs-button [theme]="defaultBtnTheme" (click)="accept()">
     <span>Okay</span>
   </ngs-button>
 </ngs-dialog-footer>
