--- a/projects/ngsuite/src/styles/_variables.scss
+++ b/projects/ngsuite/src/styles/_variables.scss
@@ -30,7 +30,7 @@ $dark-fg: #FFF !default;
 
 $color: (
   default: $default,
-  default-fg: $default,
+  default-fg: $default-fg,
 
   primary: $primary,
   primary-fg: $primary-fg,
